# my_dict

./: .gitignore  errors.py  funcs.py  my_dict.py  my_dict_commnd.py  my_errors.py  pyproject.toml  tails_dict.py
my_dict/: funcs.py  my_dict.py  my_dict_commnd.py  my_errors.py
scripts/: add_func.py
